# ml-job-triage

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: ci.yml
artifacts/: README.md
src/jobtriage/: cli.py
src/jobtriage/pipeline/: run.py
