
### `pyproject.toml` (simple + solid)
```toml
[project]
name = "ml-job-triage"
version = "0.1.0"
description = "Production-style ML log triage: parse -> featurize -> train -> predict"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "joblib>=1.3",
  "rich>=13.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.6",
]

[project.scripts]
jobtriage = "jobtriage.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]
